[gd_scene load_steps=6 format=4 uid="uid://dfdglmltorqae"]

[ext_resource type="Texture2D" uid="uid://bn6ytnv50ehkh" path="res://art/arrows.webp" id="1"]
[ext_resource type="Script" uid="uid://bpdidjer7vv75" path="res://objects/key_listener.gd" id="2"]

[sub_resource type="Animation" id="Animation_bwb8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="Animation" id="Animation_7d07a"]
resource_name = "key_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7uvb"]
_data = {
&"RESET": SubResource("Animation_bwb8k"),
&"key_hit": SubResource("Animation_7d07a")
}

[node name="KeyListener" type="Sprite2D"]
texture = ExtResource("1")
hframes = 4
vframes = 3
script = ExtResource("2")

[node name="RandomSpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="GlowOverlay" type="Sprite2D" parent="."]
modulate = Color(1.3, 1.3, 1.3, 0)
texture = ExtResource("1")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l7uvb")
}

[connection signal="timeout" from="RandomSpawnTimer" to="." method="_on_random_spawn_timer_timeout"]
